--- a/vue-demo.html
+++ b/vue-demo.html
@@ -9,6 +9,7 @@
     <style>
         .area{
             background-color: #eee;
+            padding: 10px;
         }
         xmp{
             background-color: #000;
